build: baseline on JDK 25 LTS, following the kernel's GA line (ADR-069) (#93)
Kernel ADR-066 moved the distributable kernel line to JDK 25 LTS with no
--enable-preview, and measured the JDK-26 target as costing nothing: "no
JDK-26-only API is used anywhere in the tree; the 26 in the build was never
load-bearing." That falsified this repo's stated reason for its own floor —
README said the SDK is pinned to 26 "because the Exeris platform kernel is."

The gap mattered more here than anywhere else in the ecosystem. These jars
sit on a consumer's compile classpath, and javac on JDK 25 refuses a major-70
class outright ("class file has wrong version 70.0, should be 69.0"), so the
LTS-only consumer ADR-066 exists to admit was unblocked at the kernel and
then stopped at the most upstream repo. Taken before the 1.0.0 freeze rather
than after: lowering a floor stays legal in a 1.x minor because it widens,
but a GA that promises a frozen surface an LTS consumer cannot put on a
classpath is not a state worth shipping deliberately.

Measured rather than assumed, the same probe ADR-066 ran: the reactor is
green at --release 25 across all six modules with every gate, and the emitted
jars carry class-file major 69. Stated limitation, in the ADR too: only a JRE
25 is installed here, so this was cross-compiled with javac 26 at --release
25; green *on* a JDK 25 toolchain is what the new CI row proves, which is why
the matrix change ships with the decision instead of after it.

ClassFileBaselineTest reads the class-file header rather than asserting on
maven.compiler.release, for the reason the kernel's bytecode scan gives: the
stamp is what a consumer trips over, and a module-level <release> or a plugin
default that re-raises the target would slip past a property assertion.
Verified non-vacuous by building at 26.

One artifact line, no -preview counterpart. exeris-spring-runtime ADR-068
publishes two because JEP 401 value classes are different source that has to
be exercised before th